syntax = "proto3";
package master_shard;
option go_package = "github.com/LilithGames/moxa/master_shard";

import "proto/dragonboat/dragonboat.proto";
import "master_shard/state.proto";

enum ErrCode {
  OK = 0;

  NotFound = 404;
  AlreadyExists = 421;
  VersionExpired = 422;
}

message ShardIndexQuery {
  ShardSpecIndex name = 1;
  string value = 2;
}

message ShardNodesView {
  repeated NodeCreateView nodes = 1;
  optional int32 replica = 2;
}

// Request and response
message HealthzRequest {}
message HealthzResponse {}

message ListShardsRequest {
  optional string query = 1;
  optional ShardIndexQuery index_query = 2;
}
message ListShardsResponse {
  repeated ShardSpec shards = 1;
  uint64 state_version = 2;
}

message GetStateVersionRequest {}
message GetStateVersionResponse {
  uint64 shards_state_version = 1;
  uint64 nodes_state_version = 2;
}

message NodeCreateView {
  string node_host_id = 1;
  string addr = 2;
}
message CreateShardRequest {
  string name = 1;
  string profile_name = 2;
  ShardNodesView nodes_view = 3;
  map<string, string> labels = 4;
}
message CreateShardResponse {
  ShardSpec shard = 1;
}

message ShardUpdateView {
  optional uint64 state_version = 1;
  map<string, string> labels = 2;
}
message UpdateShardRequest {
  string name = 1;
  optional ShardNodesView nodes_view = 2;
  optional ShardUpdateView update_view = 3;
}
message UpdateShardResponse {
  int32 updated = 1;
}

message DeleteShardRequest {
  string name = 1;
}
message DeleteShardResponse {
  int32 updated = 1;
}
message GetShardRequest {
  string name = 1;
}
message GetShardResponse {
  ShardSpec shard = 1;
}

message GetNodeRequest {
  string node_host_id = 1;
}
message GetNodeResponse {
  NodeSpec node = 1;
}
message UpdateNodeRequest {
  NodeSpec node = 1;
}
message UpdateNodeResponse {
  uint64 updated = 1;
}

message CreateGroupRequest{
  string group_name = 1;
  int32 size = 2;
}
message CreateGroupResponse{
  GroupSpec group = 1;
}
message UpdateGroupRequest{
  optional string expr = 1;
  optional int32 size = 2;
}
message UpdateGroupResponse{
  int32 updated = 1;
}
message DeleteGroupRequest{
  string group_name = 1;
}
message DeleteGroupResponse{
  int32 updated = 1;
}
message GetGroupRequest{
  string group_name = 1;
}
message GetGroupResponse{
  GroupSpec group = 1;
}
message ListGroupRequest{
  optional string query = 1;
}
message ListGroupResponse{
  repeated GroupSpec groups = 1;
}

service MasterShard {
  rpc Healthz(HealthzRequest) returns (HealthzResponse);
  rpc GetStateVersion(GetStateVersionRequest) returns (GetStateVersionResponse);

  rpc ListShards(ListShardsRequest) returns (ListShardsResponse);
  rpc GetShard(GetShardRequest) returns (GetShardResponse);
  rpc CreateShard(CreateShardRequest) returns (CreateShardResponse) {
    option (dragonboat.options) = { type: "mutation" };
  };
  rpc UpdateShard(UpdateShardRequest) returns (UpdateShardResponse) {
    option (dragonboat.options) = { type: "mutation" };
  }
  rpc DeleteShard(DeleteShardRequest) returns (DeleteShardResponse) {
    option (dragonboat.options) = { type: "mutation" };
  };

  rpc GetNode(GetNodeRequest) returns (GetNodeResponse);
  rpc UpdateNode(UpdateNodeRequest) returns (UpdateNodeResponse) {
    option (dragonboat.options) = { type: "mutation" };
  };

  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse) {
    option (dragonboat.options) = { type: "mutation" };
  };
  rpc UpdateGroup(UpdateGroupRequest) returns (UpdateGroupResponse) {
    option (dragonboat.options) = { type: "mutation" };
  }
  rpc DeleteGroup(DeleteGroupRequest) returns (DeleteGroupResponse) {
    option (dragonboat.options) = { type: "mutation" };
  };
  rpc GetGroup(GetGroupRequest) returns (GetGroupResponse);
  rpc ListGroup(ListGroupRequest) returns (ListGroupResponse);
}

